--- a/ncx.html
+++ b/ncx.html
@@ -23,11 +23,11 @@
 	        <a class="nav-link" href="ncek.html">Keluarga <span class="sr-only">(current)</span></a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="untitled.html">death</a>
+	        <a class="nav-link" href="untitled.html">Death</a>
 	      </li>
 	     
 	      <li class="nav-item">
-	        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+	        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Karya</a>
 	      </li>
 	    </ul>
 	  </div>
