--- a/untitled.html
+++ b/untitled.html
@@ -18,21 +18,11 @@
 	        <a class="nav-link" href="ncek.html">Keluarga <span class="sr-only">(current)</span></a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="untitled.html">death</a>
+	        <a class="nav-link" href="untitled.html">Death</a>
 	      </li>
-	      <li class="nav-item dropdown">
-	        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	          Dropdown
-	        </a>
-	        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-	          <a class="dropdown-item" href="#">Death</a>
-	          <a class="dropdown-item" href="#">Another action</a>
-	          <div class="dropdown-divider"></div>
-	          <a class="dropdown-item" href="#">Something else here</a>
-	        </div>
-	      </li>
+	      
 	      <li class="nav-item">
-	        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+	        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Karya</a>
 	      </li>
 	    </ul>
 	  </div>
