--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="gaya.css">
-	<link rel="stylesheet" type="text/css" href="gaya.css">
-	<title></title>
+	<link rel="stylesheet" type="text/css" href="pengenalan umum.css">
+	<title>Pengenalan Umum</p></title>
 </head>
 <body>
+
+<style>body{  background-image: url("https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli.github.io/blob/master/Old-Paper-2.jpg?raw=true");}</style>
 
 <style type="text/css"></style>
 
@@ -54,17 +56,19 @@
 				<div class="col-sm-6">
 					<p class="text-justify" > 
 
-						<center><img src="nicco.png" width="390" height="450"></center>
+						<center><img src="wajah nicco.png" width="390" height="450"></center>
 
-						<p>Niccolo Machiavelli lahir di Florence, Italia, 3 Mei 1469 - meninggal di Florence, Italia, 21 Juni 1527 pada umur 58 tahun) adalah diplomat dan politikus Italia yang juga seorang filsuf. Sebagai ahli teori, Machiavelli adalah figur utama dalam realitas teori politik, ia sangat disegani di Eropa pada masa Renaisans. </p>
+						<p>Niccolo Machiavelli lahir di Florence, Italia, 3 Mei 1469 dan wafat di Florence, Italia, 21 Juni 1527 pada umur 58 tahun) adalah diplomat dan politikus Italia yang juga seorang filsuf. Sebagai ahli teori, Machiavelli adalah figur utama dalam realitas teori politik, ia sangat disegani di Eropa pada masa Renaisans. </p>
 
-
-<p>Dua bukunya yang terkenal, Discorsi sopra la prima deca di Tito Livio (Diskursus tentang Livio) dan Il Principe (Sang Pangeran), awalnya ditulis sebagai harapan untuk memperbaiki kondisi pemerintahan di Italia Utara, kemudian menjadi buku umum dalam berpolitik pada masa itu.</p>
-
-<p>Adalah Machiavelli yang pertama kali mendiskusikan fenomena sosial politik tanpa merujuk pada sumber-sumber etis ataupun hukum. Inilah pendekatan pertama yang bersifat murni scientific terhadap politik. Bagi Machiavelli, politik hanya berkaitan dengan satu hal semata, yaitu memperoleh dan mempertahankan kekuasaan. Hal lainnya, seperti agama dan moralitas, yang selama ini dikaitkan dengan politik sesungguhnya tidak memiliki hubungan mendasar dengan politik, kecuali bahwa agama dan moral tersebut membantu untuk mendapat dan mempertahankan politik. </p>
+<center><img src="karya terbesar.png" width="589" height="343"></center>
 
 
-<p>Nicolo Machiavelli memandang kekuasaan bukanlah semata – mata untuk kepentingan diri sendiri, akan tetapi itu semua adalah untuk kehormatan dan kesejahteraan negara, itulah prinsip Machiavelli.</p>
+<p>Salah satu bukunya yang terkenal yaitu Il Principe (Sang Pangeran), awalnya ditulis sebagai harapan untuk memperbaiki kondisi pemerintahan di Italia Utara, kemudian menjadi buku umum dalam berpolitik pada masa itu.</p>
+
+<p>Machiavelli adalah orang yang pertama kali mendiskusikan fenomena sosial politik tanpa merujuk pada sumber-sumber etis ataupun hukum. Inilah pendekatan pertama yang bersifat murni scientific terhadap politik. Bagi Machiavelli, politik hanya berkaitan dengan satu hal semata, yaitu memperoleh dan mempertahankan kekuasaan. Hal lainnya, seperti agama dan moralitas, yang selama ini dikaitkan dengan politik sesungguhnya tidak memiliki hubungan mendasar dengan politik, kecuali bahwa agama dan moral tersebut membantu untuk mendapat dan mempertahankan politik. </p>
+
+
+<p>Nicolo Machiavelli memandang kekuasaan bukanlah semata-mata untuk kepentingan diri sendiri, akan tetapi itu semua adalah untuk kehormatan dan kesejahteraan negara, itulah prinsip Machiavelli.</p>
 
 
 
