--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <style type="text/css"></style>
 
 <center><h2>Introduction</h2></center>
-<body><style>body{  background-image: url("https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/raw/master/background2.jpg");}</style>
+<body><style>body{  background-image: url("https://raw.githubusercontent.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli.github.io/master/Old-Paper-2.jpg");}</style>
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 	  <a class="navbar-brand" href="#">Navbar</a>
