--- a/untitled.html
+++ b/untitled.html
@@ -15,7 +15,7 @@
 	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 	    <ul class="navbar-nav mr-auto">
 	      <li class="nav-item active">
-	        <a class="nav-link" href="ncek.html">Keluarga <span class="sr-only">(current)</span></a>
+	        <a class="nav-link" href="ncx.html">Keluarga <span class="sr-only">(current)</span></a>
 	      </li>
 	      <li class="nav-item">
 	        <a class="nav-link" href="untitled.html">Death</a>
