--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="gaya.css">
 	<link rel="stylesheet" type="text/css" href="pengenalan umum.css">
-	<title>Pengenalan Umum</p></title>
+	<title>Pengenalan Umum</title>
 </head>
 <body>
 
