--- a/faktaunik.html
+++ b/faktaunik.html
@@ -12,7 +12,7 @@
 	<style>body{  background-image: url("https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli.github.io/blob/master/Old-Paper-2.jpg?raw=true");}</style>
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-	  <a class="navbar-brand" href="#">Navbar</a>
+	  <a class="navbar-brand" href="index.html">Home</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
@@ -30,7 +30,7 @@
 	      </li>
 	     
 	      <li class="nav-item">
-	        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Karya</a>
+	        <a class="nav-link disabled" href="karyaniccolo.html" tabindex="-1" aria-disabled="true">Karya</a>
 	      </li>
 	    </ul>
 	  </div>
