--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body><style>body{  background-image: url("https://raw.githubusercontent.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli.github.io/master/Old-Paper-2.jpg");}</style>
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-	  <a class="navbar-brand" href="index.html">Home</a>
+	  <a class="navbar-brand" href="index.html">Beranda</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
@@ -26,10 +26,11 @@
 	      </li>
 	
 	      <li class="nav-item">
-	        <a class="nav-link" href="untitled.html">Death</a>
-	      
+	        <a class="nav-link" href="untitled.html">Kematian</a>
+	      <li class="nav-item">
+	        <a class="nav-link" href="quotes.html">quotes</a>
 	     <li class="nav-item">
-	        <a class="nav-link" href="faktaunik.html">Fakta unik</a>
+	        <a class="nav-link" href="faktaunik.html">Fakta Unik</a>
 	      </li>
 	      <li class="nav-item">
 	        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Karya</a>
