--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<style type="text/css"></style>
+<style>body{  background-image: url("https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/raw/master/aa.jpg");}</style>
 
 <center><h2>Introduction</h2></center>
 <body><style>body{  background-image: url("https://raw.githubusercontent.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli.github.io/master/Old-Paper-2.jpg");}</style>
