--- a/untitled.html
+++ b/untitled.html
@@ -18,9 +18,14 @@
 	        <a class="nav-link" href="ncx.html">Keluarga <span class="sr-only">(current)</span></a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="untitled.html">Death</a>
+	        <a class="nav-link" href="untitled.html">Kematian</a>
 	      </li>
-	      
+	      <li class="nav-item">
+	        <a class="nav-link" href="quotes.html">Quotes</a>
+	      </li>
+	<li class="nav-item">
+	        <a class="nav-link" href="faktaunik.html">Fakta Unik</a>
+	      </li>	    
 	      <li class="nav-item">
 	        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Karya</a>
 	      </li>
