--- a/ncx.html
+++ b/ncx.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="ncx.css">
+	<link rel="stylesheet" type="text/css" href="gaya.css">
 	<title>Keluarga Niccolo Machiavelli</title>
 	<style >
 		#kiri {width:1400px; height: 1000px; float: left; padding: 10px }
@@ -12,7 +12,7 @@
 	<style>body{  background-image: url("https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/raw/master/aa.jpg");}</style>
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-	  <a class="navbar-brand" href="#">Navbar</a>
+	  <a class="navbar-brand" href="index.html">Beranda</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
@@ -25,7 +25,12 @@
 	      <li class="nav-item">
 	        <a class="nav-link" href="untitled.html">Death</a>
 	      </li>
-	     
+	      <li class="nav-item">
+	        <a class="nav-link" href="quotes.html">Quotes</a>
+	      </li>
+	 <li class="nav-item">
+	        <a class="nav-link" href="faktaunik.html">Fakta unik</a>
+	      </li>
 	      <li class="nav-item">
 	        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Karya</a>
 	      </li>
