--- a/faktaunik.html
+++ b/faktaunik.html
@@ -69,7 +69,7 @@
 	</section>
 	<footer>
 		<div class="container"></div>
-		<p class="text-center"> copyright 2019 |<a href="https://dini63.github.io/">DINI</a></p>
+		<p class="text-center"> Copyright 2019 |<a href="https://mnoviarrama63.github.io/">Muhamad Noviar</a></p>
 	</footer>
 	
 
