--- a/faktaunik.html
+++ b/faktaunik.html
@@ -9,7 +9,7 @@
 	</style>
 </head>
 <body>
-	<style>body{  background-image: url("https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli.github.io/blob/master/Old-Paper-2.jpg?raw=true");}</style>
+	<style>body{  background-image: url("https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/raw/master/aa.jpg");}</style>
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 	  <a class="navbar-brand" href="index.html">Beranda</a>
@@ -23,18 +23,16 @@
 	        <a class="nav-link" href="ncek.html">Keluarga <span class="sr-only">(current)</span></a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="untitled.html">Kematian</a>
+	        <a class="nav-link" href="untitled.html">Death</a>
 	      </li>
-	       <li class="nav-item">
-	        <a class="nav-link" href="faktaunik.html">Fakta unik</a>
-	      </li>
-		    </li>
-	       <li class="nav-item">
+	      <li class="nav-item">
 	        <a class="nav-link" href="quotes.html">Quotes</a>
 	      </li>
-	     
+	 <li class="nav-item">
+	        <a class="nav-link" href="faktaunik.html">Fakta unik</a>
+	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link disabled" href="karyaniccolo.html" tabindex="-1" aria-disabled="true">Karya</a>
+	        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Karya</a>
 	      </li>
 	    </ul>
 	  </div>
@@ -62,14 +60,13 @@
 									<p class="text-justify">Machiavelli adalah pengajar kejahatan atau paling tidak mengajarkan immoralism dan amoralism. Pandangan ini dikemukakan oleh Leo Strauss (1957) karena melihat ajaran Machiavelli menghindar dari nilai keadilan, kasih sayang, kearifan, serta cinta, dan lebih cenderung mengajarkan kekejaman, kekerasan, ketakutan, dan penindasan.Machiavelli sebagai sesuatu yang ilmiah dan cara berpikir seorang scientist. Dapat disebutkan sebagai “Galileo of politics” dalam membedakan antara fakta politik dan nilai moral (between the facts of political life and the values of moral judgment). Machiavelli yang pertama kali mendiskusikan fenomena sosial politik tanpa merujuk pada sumber-sumber etis ataupun hukum. Inilah pendekatan pertama yang bersifat murni scientific terhadap politik. Bagi Machiavelli, politik hanya berkaitan dengan satu hal semata, yaitu memperoleh dan mempertahankan kekuasaan. Hal lainnya, seperti agama dan moralitas, yang selama ini dikaitkan dengan politik sesungguhnya tidak memiliki hubungan mendasar dengan politik, kecuali bahwa agama dan moral tersebut membantu untuk mendapat dan mempertahankan politik. Keahlian yang dibutuhkan untuk mendapat dan melestarikan kekuasaan adalah perhitungan. Seorang politikus mengetahui dengan benar apa yang harus dilakukan atau apa yang harus dikatakan dalam setiap situasi.Nicolo Machiavelli memandang kekuasaan bukanlah semata – mata untuk kepentingan diri sendiri, akan tetapi itu semua adalah untuk kehormatan dan kesejahteraan negara, itulah prinsip Machiavelli. Ada beberapa hal yang diungkapkan Machiavelli kepada seorang penguasa dalam merebut dan mempertahankan kekuasaan, seorang penguasa harus respect terhadap situasi dan kondisi negaranya. Jangan sampai seorang penguasa melakukan tindakan yang salah dalam mengambil tindakan politik.[2] Mengenai kekuasaan dan penguasa, bagi Machiavelli kekuasaan merupakan raison d’etre negara. Negara itu merupakan simbolisasi tertinggi kekuasaan politik yang sifatnya mencakup semua serta mutlak. Bertolak dari pandangan Machiavell itu, menurut Ahmad Suhelmi tokoh ini memiliki obsesi terhadap negara kekuasaan dimana kedaulatan tertinggi terletak pada kekuasaan penguasa dan bukan rakyat dan prinsip-prinsip hukum. Machiavelli juga mengungkapkan bahwa untuk mendapatkan kekuasaan dapat saja menggunakan cara-cara keji dan tidak baik. Namun hal tersebut hanya menjadikan ia sebagai penguasa yang berkuasa bukan penguasa yang dihormati. Dan negara yang maju harus dibentuk oleh satu orang, peraturan-peraturan dan pemerintah yang diciptakannya menentukan watak nasional daripada bangsanya.
 
 </p>
-									
 				</div>
 			</div>
 		</div>
 	</section>
 	<footer>
 		<div class="container"></div>
-		<p class="text-center"> Copyright 2019 |<a href="https://mnoviarrama63.github.io/">Muhamad Noviar</a></p>
+		<p class="text-center"> copyright 2019 |<a href="https://mnoviarrama63.github.io/">Dini</a></p>
 	</footer>
 	
 
