--- a/ncx.html
+++ b/ncx.html
@@ -23,7 +23,7 @@
 	        <a class="nav-link" href="ncek.html">Keluarga <span class="sr-only">(current)</span></a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="untitled.html">Death</a>
+	        <a class="nav-link" href="untitled.html">Kematian</a>
 	      </li>
 	      <li class="nav-item">
 	        <a class="nav-link" href="quotes.html">Quotes</a>
@@ -32,7 +32,7 @@
 	        <a class="nav-link" href="faktaunik.html">Fakta unik</a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Karya</a>
+	        <a class="nav-link disabled" href="karyaniccolo.html" tabindex="-1" aria-disabled="true">Karya</a>
 	      </li>
 	    </ul>
 	  </div>
