--- a/faktaunik.html
+++ b/faktaunik.html
@@ -63,7 +63,7 @@
 	</section>
 	<footer>
 		<div class="container"></div>
-		<p class="text-center"> copyright 2019 |<a href="https://mnoviarrama63.github.io/">Dini</a></p>
+		<p class="text-center"> copyright 2019 |<a href="https://dini63.github.io/">Dini</a></p>
 	</footer>
 
 </body>
