--- a/karya niccolo.html
+++ b/karya niccolo.html
@@ -3,39 +3,73 @@
 <head>
 	<title>Karya</title>
 	<link rel="stylesheet" type="text/css" href="karya niccolo.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<style>body{font-family: "Lato", sans-serif;}
 body, html {
   height: 200%;
-  color:#a2b5cd;
+  color: black;
   line-height: 1.8;
 }
 </style>
 
 </head>
 <body>
-	<div class="card mb-3" style="max-width: 540px;">
-  <div class="row no-gutters">
-    <div class="col-md-4">
-      <img src="https://raw.githubusercontent.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/master/the%20prince.jpg" class="card-img" alt="...">
+  <style>body{  background-image: url("https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/raw/master/background2.jpg");}</style>
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="ncx.html">Keluarga <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="untitled.html">Kematian</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="quotes.html">Quotes</a>
+        </li>
+  <li class="nav-item">
+          <a class="nav-link" href="faktaunik.html">Fakta Unik</a>
+        </li>     
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Karya</a>
+        </li>
+      </ul>
     </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      </div>
-    </div>
+  </nav>
+  <!-- awal jumbotron -->
+  <div class="jumbotron text-center">
+    <h1>Niccolo Machiavelli</h1>
+    <img src="https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/raw/master/pol.png"; width="100%"; height="100px">
   </div>
-</div>
-	<h1>Karya-karya Niccolo Machiavelli</h1>
+  <!-- akhir jumbotron -->
+  <section class="about" id="about">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-3">
+          
+        </div>
+        <div class="col-sm-6">
+	<h1><center>Karya-karya Niccolo Machiavelli</center></h1>
+  <br>
 	<h4>The Prince</h4>
 	<p>Il Principe (Sang Penguasa) adalah sebuah risalat politik oleh seorang pegawai negeri dan teoretikus politik Firenze Niccolo Machiavelli. Aslinya berjudul De Principatibus (Tentang Kekuasaan), ditulis pada 1513, namun baru diterbitkan pada 1532, lima tahun setelah kematian Machiavelli. Tulisan ini adalah sebuah studi klasik tentang kekuasaan dan bagaimana memperolehnya, memperluas, dan menggunakannya dengan hasil yang maksimal. Tulisan ini sebenarnya tidak mewakili karya-karyanya selama masa hidupnya, namun karya inilah yang paling diingat, dan yang menyebabkan lahirnya istilah "Machiavellis" yang digunakan secara luas sebagai istilah pejoratif.</p>
 	<h4>Discourses on Livy</h4>
 	<p>Khotbah - khotbah tentang Deca Pertama Livy adalah sebuah karya Niccolo Machiavelli , hasil dari penjabaran panjang yang berlangsung dari tahun 1513 hingga 1519 , tahun di mana salah satu dari dua dedikator karya itu mati; dalam kasus apa pun, tidak dapat dikesampingkan bahwa gagasan pertama tentang karya tersebut juga dapat berasal dari tahun sekretariat di Florence. Karya ini didedikasikan untuk Zanobi Buondelmonti dan Cosimo Rucellai , dua eksponen terhebat dari Orti Oricellari di Florence , di mana aristokrat muda bertemu untuk membahas politik, seni, dan sastra. Seperti banyak karya Machiavelli lainnya, Wacana ini diterbitkan secara anumerta pada tahun 1531 oleh pencetak Florentine, Bernardo Giunti.</p>
-	<style>body{background-color: #8b7d6b}
+  <style>body{background-image: "https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/blob/master/bg%20vintage.jpg?raw=true}"</style>
 	<footer>
 		<div class="container"></div>
-		<p class="text-center"> copyright 2019 |<a href="https://nadyava.github.io/">Nadya Valentina Putri</a></p>
+    <p class="text-center"> copyright 2019 |<a href="nadyava.github.io/">Nadya Valentina Putri</a></p>
 </footer>
 
 </body>
