--- a/ncx.html
+++ b/ncx.html
@@ -67,7 +67,7 @@
 	</tr></center>
 	<tr>
 		<td>Ayah</td>
-		<td>Bernardo di Niccolò Machiavelli</td>
+		<td>Bernardo di Niccolò Machiavelli <img src="aba.jpg"></td>
 	</tr>
 	<tr>
 		<td>Ibu</td>
