--- a/ncx.html
+++ b/ncx.html
@@ -66,47 +66,47 @@
 		<td>Marietta CorsiniIstri Niccolò Machiavelli <img src="aha.jpg"></td>
 	</tr></center>
 	<tr>
-		<td>Ayah</td>
+		<td><h3>Ayah</h3></td>
 		<td>Bernardo di Niccolò Machiavelli <img src="aba.jpg"></td>
 	</tr>
 	<tr>
-		<td>Ibu</td>
+		<td><h3>Ibu</h3></td>
 		<td>Bartolommea di Stefano Nelli</td>
 	</tr>
 	<tr>
-		<td>Saudara perempuan Niccolò Machiavelli</td>
+		<td><h3>Saudara perempuan Niccolò Machiavelli</h3></td>
 		<td>Spring Machiavelli</td>
 	</tr>
 	<tr>
-		<td>Putra Niccolò Machiavelli</td>
+		<td><h3>Putra Niccolò Machiavelli</h3></td>
 		<td>Guido Machiavelli</td>
 	</tr>
 	<tr>
-		<td>Putra Niccolò Machiavelli</td>
+		<td><h3>Putra Niccolò Machiavelli</h3></td>
 		<td>Piero Machiavelli</td>
 	</tr>
 	<tr>
-		<td>Putra Niccolò Machiavelli</td>
+		<td><h3>Putra Niccolò Machiavelli</h3></td>
 		<td>Lodovico Machiavelli</td>
 	</tr>
 	<tr>
-		<td>Putri Niccolò Machiavelli</td>
+		<td><h3>Putri Niccolò Machiavelli</h3></td>
 		<td>Primerana Machiavelli</td>
 	</tr>
 	<tr>
-		<td>Putri Niccolò Machiavelli</td>
+		<td><h3>Putri Niccolò Machiavelli</h3></td>
 		<td>Baccina Machiavelli</td>
 	</tr>
 	<tr>
-		<td>Saudara laki-laki Niccolò Machiavelli</td>
+		<td><h3>Saudara laki-laki Niccolò Machiavelli</h3></td>
 		<td>Totto Machiavelli</td>
 	</tr>
 	<tr>
-		<td>Putra Niccolò Machiavelli</td>
+		<td><h3>Putra Niccolò Machiavelli</h3></td>
 		<td>Bernardo Machiavelli</td>
 	</tr>
 	<tr>
-		<td>Saudara perempuan Niccolò Machiavelli</td>
+		<td><h3>Saudara perempuan Niccolò Machiavelli</h3></td>
 		<td>Margherita Machiavelli</td>
 	</tr>
 
