--- a/ncx.html
+++ b/ncx.html
@@ -31,7 +31,7 @@
 	        <a class="nav-link" href="faktaunik.html">Fakta unik</a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link disabled" href="karyaniccolo.html" tabindex="-1" aria-disabled="true">Karya</a>
+	        <a class="nav-link" href="karya niccolo.html">Karya</a>
 	      </li>
 	    </ul>
 	  </div>
