--- a/quotes.html
+++ b/quotes.html
@@ -12,27 +12,32 @@
 <body>
   <style>body{  background-image: url(https://raw.githubusercontent.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/master/background.jpg);}</style>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	  <a class="navbar-brand" href="index.html">Beranda</a>
+	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+	    <span class="navbar-toggler-icon"></span>
+	  </button>
 
-    <div  class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="ncek.html">Keluarga <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="untitled.html">Death</a>
-        </li>
-       
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Karya</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+	    <ul class="navbar-nav mr-auto">
+	      <li class="nav-item active">
+	        <a class="nav-link" href="ncx.html">Keluarga <span class="sr-only">(current)</span></a>
+	      </li>
+	
+	      <li class="nav-item">
+	        <a class="nav-link" href="untitled.html">Kematian</a>
+	      <li class="nav-item">
+	        <a class="nav-link" href="quotes.html">quotes</a>
+	     <li class="nav-item">
+	        <a class="nav-link" href="faktaunik.html">Fakta Unik</a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Karya</a>
+	      </li>
+	    </ul>
+	  </div>
+	</nav>
   <!-- awal jumbotron -->
   <div class="jumbotron text-center">
     <h1>Niccolo Machiavelli</h1>
