--- a/quotes.html
+++ b/quotes.html
@@ -103,6 +103,6 @@
 <footer>
 		<div class="container"></div>
 		<p class="text-center"> penanggung jawab <br><a href="https://racherjuangdito.github.io/">Racher</a><br>
-		<a href="https://firaaulia63.github.io/firaaulia63.github.io/">Fira</a></p>
+		<a href="https://firaaulia63.github.io/firaaulia.github.io/">Fira</a></p>
 </footer>
 </html>
