--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
 	<link rel="stylesheet" type="text/css" href="gaya.css">
 	<title></title>
 </head>
-<body>
+<body><style>body{  background-image: url("https://raw.githubusercontent.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli.github.io/master/Old-Paper-2.jpg");}</style>
+
 
 <style>body{  background-image: url("https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/raw/master/aa.jpg");}</style>
 
-<center><h2>Introduction</h2></center>
-<body><style>body{  background-image: url("https://raw.githubusercontent.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli.github.io/master/Old-Paper-2.jpg");}</style>
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 	  <a class="navbar-brand" href="index.html">Beranda</a>
@@ -28,7 +27,7 @@
 	      <li class="nav-item">
 	        <a class="nav-link" href="untitled.html">Kematian</a>
 	      <li class="nav-item">
-	        <a class="nav-link" href="quotes.html">quotes</a>
+	        <a class="nav-link" href="quotes.html">Quotes</a>
 	     <li class="nav-item">
 	        <a class="nav-link" href="faktaunik.html">Fakta Unik</a>
 	      </li>
