--- a/quotes.html
+++ b/quotes.html
@@ -28,7 +28,7 @@
 	      <li class="nav-item">
 	        <a class="nav-link" href="untitled.html">Kematian</a>
 	      <li class="nav-item">
-	        <a class="nav-link" href="quotes.html">quotes</a>
+	        <a class="nav-link" href="quotes.html">Quotes</a>
 	     <li class="nav-item">
 	        <a class="nav-link" href="faktaunik.html">Fakta Unik</a>
 	      </li>
@@ -97,6 +97,8 @@
     </div>
   </div>
 </div>
+	<br>
+	<br>
 
 
 </body>
