--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="gaya.css">
 	<title></title>
 </head>
-<body><style>body{  background-image: url("https://raw.githubusercontent.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli.github.io/master/Old-Paper-2.jpg");}</style>
+<body><style>body{  background-image: url("https://raw.githubusercontent.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/master/background.jpg");}</style>
 
 
 <style>body{  background-image: url("https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/raw/master/aa.jpg");}</style>
