--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body><style>body{  background-image: url("https://raw.githubusercontent.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/master/background.jpg");}</style>
 
 
-<style>body{  background-image: url("https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/raw/master/aa.jpg");}</style>
+<style>body{  background-image: url("https://raw.githubusercontent.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/master/background.jpg");}</style>
 
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
