--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 <body><style>body{  background-image: url("https://raw.githubusercontent.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/master/background.jpg");}</style>
 
 
-<style>body{  background-image: url("https://raw.githubusercontent.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/master/background.jpg");}</style>
-
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 	  <a class="navbar-brand" href="index.html">Beranda</a>
@@ -32,7 +30,7 @@
 	        <a class="nav-link" href="faktaunik.html">Fakta Unik</a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Karya</a>
+	        <a class="nav-link" href="karya niccolo.html">Karya</a>
 	      </li>
 	    </ul>
 	  </div>
