--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<!-- awal jumbotron -->
 	<div class="jumbotron text-center">
 		<h1>Niccolo Machiavelli</h1>
-		
+		<img src="https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/raw/master/pol.png"; width="100%"; height="100px">
 	</div>
 	<!-- akhir jumbotron -->
 	<section class="about" id="about">
