--- a/faktaunik.html
+++ b/faktaunik.html
@@ -9,7 +9,7 @@
 <body><style>body{  background-image: url("https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/raw/master/background2.jpg");}</style>
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-	  <a class="navbar-brand" href="#">Navbar</a>
+	  <a class="navbar-brand" href="index.html">Beranda</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
@@ -28,8 +28,8 @@
 	<li class="nav-item">
 	        <a class="nav-link" href="faktaunik.html">Fakta Unik</a>
 	      </li>	    
-	      <li class="nav-item">
-	        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Karya</a>
+	     <li class="nav-item">
+	        <a class="nav-link" href="karya niccolo.html">Karya</a>
 	      </li>
 	    </ul>
 	  </div>
