--- a/karya niccolo.html
+++ b/karya niccolo.html
@@ -69,7 +69,7 @@ body, html {
   <style>body{background-image: "https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/blob/master/bg%20vintage.jpg?raw=true}"</style>
 	<footer>
 		<div class="container"></div>
-    <p class="text-center"> copyright 2019 |<a href="nadyava.github.io/">Nadya Valentina Putri</a></p>
+    <p class="text-center"> copyright 2019 |<a href="nadyava.github.io">Nadya Valentina Putri</a></p>
 </footer>
 
 </body>
