--- a/karya niccolo.html
+++ b/karya niccolo.html
@@ -1,20 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Karya</title>
-	<link rel="stylesheet" type="text/css" href="karya niccolo.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<style>body{font-family: "Lato", sans-serif;}
-body, html {
-  height: 200%;
-  color: black;
-  line-height: 1.8;
-}
-</style>
-
+<head><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="gaya.css">
+	<title></title>
 </head>
-<body>
-  <style>body{  background-image: url("https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/raw/master/background2.jpg");}</style>
+<body><style>body{  background-image: url("https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/raw/master/background2.jpg");}</style>
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="Index.html">Beranda</a>
@@ -67,6 +57,8 @@ body, html {
 	<h4>Discourses on Livy</h4>
 	<p>Khotbah - khotbah tentang Deca Pertama Livy adalah sebuah karya Niccolo Machiavelli , hasil dari penjabaran panjang yang berlangsung dari tahun 1513 hingga 1519 , tahun di mana salah satu dari dua dedikator karya itu mati; dalam kasus apa pun, tidak dapat dikesampingkan bahwa gagasan pertama tentang karya tersebut juga dapat berasal dari tahun sekretariat di Florence. Karya ini didedikasikan untuk Zanobi Buondelmonti dan Cosimo Rucellai , dua eksponen terhebat dari Orti Oricellari di Florence , di mana aristokrat muda bertemu untuk membahas politik, seni, dan sastra. Seperti banyak karya Machiavelli lainnya, Wacana ini diterbitkan secara anumerta pada tahun 1531 oleh pencetak Florentine, Bernardo Giunti.</p>
   <style>body{background-image: "https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/blob/master/bg%20vintage.jpg?raw=true}"</style>
+	
+		</section>
 	<footer>
 		<div class="container"></div>
 		<p class="text-center"> copyright 2019 |<a href="https://gimnastiar.github.io/">Gimnastiar</a></p>
