--- a/faktaunik.html
+++ b/faktaunik.html
@@ -29,7 +29,7 @@
 	        <a class="nav-link" href="faktaunik.html">Fakta Unik</a>
 	      </li>	    
 	      <li class="nav-item">
-	        <a class="nav-link disabled" href="karya niccolo.html" tabindex="-1" aria-disabled="true">Karya</a>
+	        <a class="nav-link" href="karya niccolo.html">Karya</a>
 	      </li>
 	    </ul>
 	  </div>
