--- a/karya niccolo.html
+++ b/karya niccolo.html
@@ -61,7 +61,7 @@
 		</section>
 	<footer>
 		<div class="container"></div>
-		<p class="text-center"> copyright 2019 |<a href="https://gimnastiar.github.io/">Gimnastiar</a></p>
+		<p class="text-center"> copyright 2019 |<a href="https://nadyava.github.io/">Nadya Valentina Putri</a></p>
 	</footer>
 
 </body>
