--- a/quotes.html
+++ b/quotes.html
@@ -57,7 +57,7 @@
         </div>
 <div class="col-sm-6">
 <div class="card-deck">
-  <div class="card" tyle="width: 18rem;">
+  <div class="card" style="width: 18rem;">
     <img src="https://raw.githubusercontent.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/master/quotes.png" class="card-img-top" alt="...">
     <div class="card-body">
       <p class="card-text">siapapun yang menginginkan kesuksesan yang konstan ia harus mengubah dirinya seiring dengan waktu.</p>
