--- a/quotes.html
+++ b/quotes.html
@@ -104,7 +104,7 @@
 </body>
 <footer>
 		<div class="container"></div>
-		<p class="text-center"> penanggung jawab <br><a href="https://racherjuangdito.github.io/">Racher</a><br>
+		<p class="text-center"> copyright 2019 |<a href="https://racherjuangdito.github.io/">Racher</a>
 		<a href="https://firaaulia63.github.io/firaaulia.github.io/">Fira</a></p>
 </footer>
 </html>
