--- a/karya niccolo.html
+++ b/karya niccolo.html
@@ -53,10 +53,10 @@
 	<h1><center>Karya-karya Niccolo Machiavelli</center></h1>
   <br>
 	<h4>The Prince</h4>
+		<img src="https://raw.githubusercontent.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/master/the%20prince.jpg" width="200px" height="300px">
 	<p>Il Principe (Sang Penguasa) adalah sebuah risalat politik oleh seorang pegawai negeri dan teoretikus politik Firenze Niccolo Machiavelli. Aslinya berjudul De Principatibus (Tentang Kekuasaan), ditulis pada 1513, namun baru diterbitkan pada 1532, lima tahun setelah kematian Machiavelli. Tulisan ini adalah sebuah studi klasik tentang kekuasaan dan bagaimana memperolehnya, memperluas, dan menggunakannya dengan hasil yang maksimal. Tulisan ini sebenarnya tidak mewakili karya-karyanya selama masa hidupnya, namun karya inilah yang paling diingat, dan yang menyebabkan lahirnya istilah "Machiavellis" yang digunakan secara luas sebagai istilah pejoratif.</p>
 	<h4>Discourses on Livy</h4>
 	<p>Khotbah - khotbah tentang Deca Pertama Livy adalah sebuah karya Niccolo Machiavelli , hasil dari penjabaran panjang yang berlangsung dari tahun 1513 hingga 1519 , tahun di mana salah satu dari dua dedikator karya itu mati; dalam kasus apa pun, tidak dapat dikesampingkan bahwa gagasan pertama tentang karya tersebut juga dapat berasal dari tahun sekretariat di Florence. Karya ini didedikasikan untuk Zanobi Buondelmonti dan Cosimo Rucellai , dua eksponen terhebat dari Orti Oricellari di Florence , di mana aristokrat muda bertemu untuk membahas politik, seni, dan sastra. Seperti banyak karya Machiavelli lainnya, Wacana ini diterbitkan secara anumerta pada tahun 1531 oleh pencetak Florentine, Bernardo Giunti.</p>
-  <style>body{background-image: "https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/blob/master/bg%20vintage.jpg?raw=true}"</style>
 	
 		</section>
 	<footer>
