--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
 					<p class="text-justify" > 
 
 						<p></p>
-						<center><img src="wajah nicco.png" width="390" height="450"></center>
+						<center><img src="wajah nicco depan.png" width="390" height="450"></center>
 						<p></p>
 
 						<p>Niccolo Machiavelli lahir di Florence, Italia, 3 Mei 1469 dan wafat di Florence, Italia, 21 Juni 1527 pada umur 58 tahun) adalah diplomat dan politikus Italia yang juga seorang filsuf. Sebagai ahli teori, Machiavelli adalah figur utama dalam realitas teori politik, ia sangat disegani di Eropa pada masa Renaisans. </p>
 
-<center><img src="karya terbesar.png" width="589" height="343"></center>
+<center><img src="karya terbesar baru.png" width="589" height="343"></center>
 <p></p
 
 <p>Salah satu bukunya yang terkenal yaitu Il Principe (Sang Pangeran), awalnya ditulis sebagai harapan untuk memperbaiki kondisi pemerintahan di Italia Utara, kemudian menjadi buku umum dalam berpolitik pada masa itu.</p>
