--- a/quotes.html
+++ b/quotes.html
@@ -47,6 +47,10 @@
           
       </div>
       </div>
+	          <div class="row">
+        <div class="col-sm-3">
+          
+        </div>
 <div class="col-sm-6">
 <div class="card-deck">
   <div class="card" style="width: 18rem;">
