--- a/upload sini/karya.html
+++ b/upload sini/karya.html
@@ -42,7 +42,11 @@ body {font-family: "Lato", sans-serif}
   <a href="#kami.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">ABOUT US</a>
 </div>
 <!-- Page content -->
+<br>
+<br>
+<h1 class="putih"><center >Ｈｉｓ Ｔｈｏｕｇｈｔｓ Ａｂｏｕｔ Ｐｏｌｉｔｉｃ ａｎｄ Ｈｉｓｔｏｒｙ</center></h1>
 
+<style>body{  background-image: url("https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/blob/master/upload%20sini/8.jpg?raw=true");}</style>
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
   <i class="fa fa-facebook-official w3-hover-opacity"></i>
