--- a/upload sini/karya.html
+++ b/upload sini/karya.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <title>NICCOLO MACHIAVELLI</title>
@@ -45,6 +44,20 @@ body {font-family: "Lato", sans-serif}
 <br>
 <br>
 <h1 class="putih"><center >Ｈｉｓ Ｔｈｏｕｇｈｔｓ Ａｂｏｕｔ Ｐｏｌｉｔｉｃ ａｎｄ Ｈｉｓｔｏｒｙ</center></h1>
+<br>
+<br>
+<center><h3 class="putih">The Prince</h3></center>
+<div class="w3-row">
+    <div class="w3-col m6 w3-center w3-padding-large">
+      <img src="https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/blob/master/upload%20sini/niko.jpg?raw=true" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="The Prince" width="250px" height="350px">
+    </div>
+
+    <!-- Hide this text on small devices -->
+    <div class="w3-col m6 w3-hide-small w3-padding-large">
+      <p class ="putih">Buku ini dikarang oleh Niccolò di Bernardo dei Machiavelli (3 May 1469 – 21 June 1527) atau yang lebih sering disingkat Machiavelli .
+Buku ini diterbitkan tahun 1532. Padahal buku ini ditulis sejak 1513. Artinya butuh 19 tahun untuk membuat penerbit memutuskan bahwa tulisan ini layak terbit.</p>
+    </div>
+  </div>
 
 <style>body{  background-image: url("https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/blob/master/upload%20sini/8.jpg?raw=true");}</style>
 <!-- Footer -->
@@ -59,3 +72,4 @@ body {font-family: "Lato", sans-serif}
 </footer>
 </body>
 </html>
+
