--- a/upload sini/karya.html
+++ b/upload sini/karya.html
@@ -46,16 +46,14 @@ body {font-family: "Lato", sans-serif}
 <h1 class="putih"><center >Ｈｉｓ Ｔｈｏｕｇｈｔｓ Ａｂｏｕｔ Ｐｏｌｉｔｉｃ ａｎｄ Ｈｉｓｔｏｒｙ</center></h1>
 <br>
 <br>
-<center><h3 class="putih">The Prince</h3></center>
 <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
-      <img src="https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/blob/master/upload%20sini/niko.jpg?raw=true" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="The Prince" width="250px" height="350px">
+      <img src="https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/blob/master/upload%20sini/niko.jpg?raw=true" class="w3-round w3-image w3-opacity w3-hover-opacity-off w3-border" alt="The Prince" width="280px" height="350px">
     </div>
-
     <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-hide-small w3-padding-large">
-      <p class ="putih">Buku ini dikarang oleh Niccolò di Bernardo dei Machiavelli (3 May 1469 – 21 June 1527) atau yang lebih sering disingkat Machiavelli .
-Buku ini diterbitkan tahun 1532. Padahal buku ini ditulis sejak 1513. Artinya butuh 19 tahun untuk membuat penerbit memutuskan bahwa tulisan ini layak terbit.</p>
+      <h3 class="putih"> 𝒯𝒽𝑒 𝒫𝓇𝒾𝓃𝒸𝑒</h3>
+      <p class ="putih text">Il Principe (Sang Penguasa) adalah sebuah risalat politik oleh seorang pegawai negeri dan teoretikus politik Firenze Niccolò Machiavelli. Aslinya berjudul De Principatibus (Tentang Kekuasaan), ditulis pada 1513,[1] namun baru diterbitkan pada 1532, lima tahun setelah kematian Machiavelli. Tulisan ini adalah sebuah studi klasik tentang kekuasaan – bagaimana memperolehnya, memperluas, dan menggunakannya dengan hasil yang maksimal. Tulisan ini sebenarnya tidak mewakili karya-karyanya selama masa hidupnya, namun karya inilah yang paling diingat, dan yang menyebabkan lahirnya istilah "Machiavellis" yang digunakan secara luas sebagai istilah pejoratif.</p>
     </div>
   </div>
 
@@ -68,8 +66,9 @@ Buku ini diterbitkan tahun 1532. Padahal buku ini ditulis sejak 1513. Artinya bu
   <i class="fa fa-pinterest-p w3-hover-opacity"></i>
   <i class="fa fa-twitter w3-hover-opacity"></i>
   <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <p class="w3-medium">Powered by <a href="MASUKIN WEB MASING2" target="_blank">MASUKIN NAMA</a></p>
+  <p class="w3-medium">Powered by <a href="https://dini63.github.io/" target="_blank">DINI</a></p>
+   <p class="w3-medium">Powered by <a href="https://nadyava.github.io/" target="_blank">Nadya Valentina Putri</a></p>
+
 </footer>
 </body>
 </html>
-
