--- a/upload sini/karya.html
+++ b/upload sini/karya.html
@@ -54,8 +54,13 @@ body {font-family: "Lato", sans-serif}
     <div class="w3-col m6 w3-hide-small w3-padding-large">
       <h3 class="putih"> 𝒯𝒽𝑒 𝒫𝓇𝒾𝓃𝒸𝑒</h3>
       <p class ="putih text">Il Principe (Sang Penguasa) adalah sebuah risalat politik oleh seorang pegawai negeri dan teoretikus politik Firenze Niccolò Machiavelli. Aslinya berjudul De Principatibus (Tentang Kekuasaan), ditulis pada 1513,[1] namun baru diterbitkan pada 1532, lima tahun setelah kematian Machiavelli. Tulisan ini adalah sebuah studi klasik tentang kekuasaan – bagaimana memperolehnya, memperluas, dan menggunakannya dengan hasil yang maksimal. Tulisan ini sebenarnya tidak mewakili karya-karyanya selama masa hidupnya, namun karya inilah yang paling diingat, dan yang menyebabkan lahirnya istilah "Machiavellis" yang digunakan secara luas sebagai istilah pejoratif.</p>
+      <br>
+       <p class ="cokelat teks">“it is much safer to be feared than loved because ...love is preserved by the link of obligation which, owing to the baseness of men, is broken at every opportunity for their advantage; but fear preserves you by a dread of punishment which never fails.” </p>
+<p class="cokelat teks">― Niccolo Machiavelli, The Prince </p>
+      
     </div>
   </div>
+
 
 <style>body{  background-image: url("https://github.com/SMAKBO/tugas-labkom-2019-xi-1-niccolo-machiavelli/blob/master/upload%20sini/8.jpg?raw=true");}</style>
 <!-- Footer -->
